{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 324,
  "lineage": "87139cac-d069-f7b5-f185-3893836d2ef2",
  "resources": [
    {
      "module": "module.Elastic_IP_module[\"eip01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014cb3a8efeb8433f",
            "association_id": "eipassoc-038665cd51cd42f69",
            "domain": "vpc",
            "id": "eipalloc-014cb3a8efeb8433f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-021efad8c8b82916b",
            "private_dns": "ip-192-168-21-119.ec2.internal",
            "private_ip": "192.168.21.119",
            "public_dns": "ec2-52-207-77-74.compute-1.amazonaws.com",
            "public_ip": "52.207.77.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat01"
            },
            "tags_all": {
              "Name": "nat01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Elastic_IP_module[\"eip02\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067b562e578fc2a66",
            "association_id": "eipassoc-0a90a4ece0933f342",
            "domain": "vpc",
            "id": "eipalloc-067b562e578fc2a66",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e17cfa9f10812e9a",
            "private_dns": "ip-192-168-67-151.ec2.internal",
            "private_ip": "192.168.67.151",
            "public_dns": "ec2-54-237-28-34.compute-1.amazonaws.com",
            "public_ip": "54.237.28.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat02"
            },
            "tags_all": {
              "Name": "nat02"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NatGW_module[\"natGW01\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014cb3a8efeb8433f",
            "connectivity_type": "public",
            "id": "nat-0bdf6bbe94156f928",
            "network_interface_id": "eni-021efad8c8b82916b",
            "private_ip": "192.168.21.119",
            "public_ip": "52.207.77.74",
            "subnet_id": "subnet-06fb2ecedea549393",
            "tags": {
              "Name": "natGW01"
            },
            "tags_all": {
              "Name": "natGW01"
            }
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.lb",
            "module.aws_subnets.aws_subnet.main",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NatGW_module[\"natGW02\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067b562e578fc2a66",
            "connectivity_type": "public",
            "id": "nat-0b8a8b124968f9b54",
            "network_interface_id": "eni-0e17cfa9f10812e9a",
            "private_ip": "192.168.67.151",
            "public_ip": "54.237.28.34",
            "subnet_id": "subnet-0537f4305af708734",
            "tags": {
              "Name": "natGW02"
            },
            "tags_all": {
              "Name": "natGW02"
            }
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.lb",
            "module.aws_subnets.aws_subnet.main",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnets[\"private-us-east-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565597968128:subnet/subnet-0f2c6feb5c296ae01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2c6feb5c296ae01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565597968128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a"
            },
            "tags_all": {
              "Name": "private-us-east-1a"
            },
            "vpc_id": "vpc-04239adfda930b45f"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnets[\"private-us-east-1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565597968128:subnet/subnet-0df5885c2b00ac3d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df5885c2b00ac3d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565597968128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b"
            },
            "tags_all": {
              "Name": "private-us-east-1b"
            },
            "vpc_id": "vpc-04239adfda930b45f"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnets[\"public-us-east-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565597968128:subnet/subnet-06fb2ecedea549393",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fb2ecedea549393",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565597968128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a"
            },
            "tags_all": {
              "Name": "public-us-east-1a"
            },
            "vpc_id": "vpc-04239adfda930b45f"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnets[\"public-us-east-1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565597968128:subnet/subnet-0537f4305af708734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0537f4305af708734",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565597968128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b"
            },
            "tags_all": {
              "Name": "public-us-east-1b"
            },
            "vpc_id": "vpc-04239adfda930b45f"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internetGW_module[\"igw01\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565597968128:internet-gateway/igw-05d567892ab050807",
            "id": "igw-05d567892ab050807",
            "owner_id": "565597968128",
            "tags": {
              "Name": "My_IGW"
            },
            "tags_all": {
              "Name": "My_IGW"
            },
            "vpc_id": "vpc-04239adfda930b45f"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"RT01Assoc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbd5af98cb2ea138",
            "route_table_id": "rtb-014e30a2fc6d1cec5",
            "subnet_id": "subnet-06fb2ecedea549393"
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.lb",
            "module.NatGW_module.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"RT02Assoc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fdd99d7ff4b3576",
            "route_table_id": "rtb-014e30a2fc6d1cec5",
            "subnet_id": "subnet-0537f4305af708734"
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.lb",
            "module.NatGW_module.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"RT03Assoc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044508f71f5d9727a",
            "route_table_id": "rtb-0a402ee2ef3e59023",
            "subnet_id": "subnet-0f2c6feb5c296ae01"
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.lb",
            "module.NatGW_module.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"RT04Assoc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f6452355703169f",
            "route_table_id": "rtb-0ea909306e3b04154",
            "subnet_id": "subnet-0df5885c2b00ac3d3"
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.lb",
            "module.NatGW_module.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565597968128:route-table/rtb-014e30a2fc6d1cec5",
            "id": "rtb-014e30a2fc6d1cec5",
            "owner_id": "565597968128",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d567892ab050807",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route"
            },
            "tags_all": {
              "Name": "Public-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04239adfda930b45f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.lb",
            "module.NatGW_module.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT02\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565597968128:route-table/rtb-0a402ee2ef3e59023",
            "id": "rtb-0a402ee2ef3e59023",
            "owner_id": "565597968128",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bdf6bbe94156f928",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route"
            },
            "tags_all": {
              "Name": "Private-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04239adfda930b45f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.lb",
            "module.NatGW_module.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT03\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565597968128:route-table/rtb-0ea909306e3b04154",
            "id": "rtb-0ea909306e3b04154",
            "owner_id": "565597968128",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b8a8b124968f9b54",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route"
            },
            "tags_all": {
              "Name": "Private-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04239adfda930b45f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.lb",
            "module.NatGW_module.aws_nat_gateway.example",
            "module.aws_subnets.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_modules[\"vpc01\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565597968128:vpc/vpc-04239adfda930b45f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04e7c0270d219734d",
            "default_route_table_id": "rtb-00d4e6aaaf7bd5dd8",
            "default_security_group_id": "sg-0b6484a694a12a5bd",
            "dhcp_options_id": "dopt-013d4c0c4b039139f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04239adfda930b45f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d4e6aaaf7bd5dd8",
            "owner_id": "565597968128",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}